log.txt
In file included from main_hash.cpp:2:0:
prefixSpan_hash.hpp:23:0: warning: "pairSet" redefined [enabled by default]
 #define pairSet set<pair<classType, dataType>>
 ^
In file included from prefixSpan_hash.hpp:12:0,
                 from main_hash.cpp:2:
sequence_hash.hpp:20:0: note: this is the location of the previous definition
 #define pairSet set<pair<classType,dataType>>
 ^
seq_pointer_hash.cpp:86:50: warning: multi-character character constant [-Wmultichar]
             cerr<<(*(result.current))[varClass]<<' == '<<varData<<'\n'
                                                  ^
seq_pointer_hash.cpp: In member function 'seq_pointer_hash seq_pointer_hash::proyect(int, int, sequence_hash&)':
seq_pointer_hash.cpp:87:13: error: expected ';' before 'result'
             result.wildcard = true;
             ^
prefixSpan_hash.cpp:13:0: warning: "container" redefined [enabled by default]
 #define container map_unorderedt<classType, dataType>
 ^
In file included from prefixSpan_hash.cpp:2:0:
seq_pointer_hash.hpp:19:0: note: this is the location of the previous definition
 #define container unordered_map<classType, dataType>
 ^
